--- a/src/app/privado/galeria/galeria.component.html
+++ b/src/app/privado/galeria/galeria.component.html
@@ -27,6 +27,7 @@
       </div>
       <div class="card">
         <div class="card-body">
+          <!-- TODO: AGREGAR SI NO HAY FOTOS -->
           <div class="mansory">
             <div class="item" *ngFor="let image of images">
               <img [src]="'/files/gallery/' + image.archivo" />
